--- a/.github/workflows/deploy-container.yml
+++ b/.github/workflows/deploy-container.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           aws lambda update-function-code --function-name karaf-vm-db-deployment --zip-file fileb://karaf-system/system.sql/target/system.sql.zip
           aws lambda invoke --function-name karaf-vm-db-deployment --invocation-type RequestResponse db-deployment-response.json | grep 200
-  build_and_test:
+  build_and_deploy:
     needs: migrate_db
     name: Deploy new container to ECS
     runs-on: ubuntu-latest
