--- a/.github/workflows/manual-deploy-gh.yml
+++ b/.github/workflows/manual-deploy-gh.yml
@@ -1,13 +1,9 @@
-name: Manual Build and Test
+name: Manual Build and Deploy to GH Packages
 on:
-  workflow_dispatch:
-    inputs:
-      git-ref:
-        description: Git Ref (Optional)
-        required: false
+  workflow_dispatch
 jobs:
-  build_and_test:
-    name: Manual Java Build and Test
+  build_and_deploy:
+    name: Deploy to Github Packages
     runs-on: ubuntu-latest
     steps:
       - name: Cache local Maven repository
@@ -17,22 +13,16 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-      - name: Clone Repository (Latest)
-        uses: actions/checkout@v2
-        if: github.event.inputs.git-ref == ''
-      - name: Clone Repository (Custom Ref)
-        uses: actions/checkout@v2
-        if: github.event.inputs.git-ref != ''
-        with:
-          ref: ${{ github.event.inputs.git-ref }}
+      - uses: actions/checkout@v2
       - name: Setup Java 11
         uses: actions/setup-java@v1
         with:
           java-version: "11"
           architecture: x64
       - name: Run Maven
-        run: mvn --settings settings.xml clean install --file karaf-system/pom.xml -Pdev-build
+        run: mvn --settings settings.xml clean deploy --file karaf-system/pom.xml -Dpostgres.ecs.password=$KARAF_DB_PWD -Pecs-build
         env:
+          KARAF_DB_PWD: ${{secrets.KARAF_DB_PWD}}
           PACKAGES_WEBSITE_TOKEN: ${{secrets.PACKAGES_WEBSITE_TOKEN}}
           PACKAGES_HTML_TOKEN: ${{secrets.PACKAGES_HTML_TOKEN}}
           PACKAGES_CORE_TOKEN: ${{secrets.PACKAGES_CORE_TOKEN}}
