Migrating features and kernel

--- a/karaf-system/system.core/pom.xml
+++ b/karaf-system/system.core/pom.xml
@@ -1,251 +1,18 @@
-<?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>io.github.vm.patlego</groupId>
     <artifactId>karaf-system</artifactId>
+    <groupId>io.github.vm.patlego</groupId>
     <version>1.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
   </parent>
-
-  <packaging>karaf-assembly</packaging>
   <groupId>io.github.vm.patlego</groupId>
   <artifactId>system.core</artifactId>
 
-  <name>System Kernel</name>
-
-  <properties>
-    <maven.deploy.skip>true</maven.deploy.skip>
-  </properties>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.karaf.tooling</groupId>
-        <artifactId>karaf-maven-plugin</artifactId>
-        <version>${karaf.runtime.version}</version>
-        <extensions>true</extensions>
-        <executions>
-          <execution>
-            <id>process-resources</id>
-            <phase>process-resources</phase>
-            <goals>
-              <goal>assembly</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>package</id>
-            <goals>
-              <goal>archive</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <startupFeatures>
-            <feature>eventadmin</feature>
-          </startupFeatures>
-          <bootFeatures>
-            <feature>wrap</feature>
-            <feature>bundle</feature>
-            <feature>config</feature>
-            <feature>system</feature>
-            <feature>feature</feature>
-            <feature>package</feature>
-            <feature>log</feature>
-            <feature>ssh</feature>
-            <feature>instance</feature>
-            <feature>shell</feature>
-            <feature>management</feature>
-            <feature>service</feature>
-            <feature>jaas</feature>
-            <feature>deployer</feature>
-            <feature>diagnostic</feature>
-            <feature>webconsole</feature>
-            <feature>shell-compat</feature>
-
-            <!-- This is to be deleted when we migrate to 4.3.1 -->
-            <feature>jetty</feature>
-
-            <feature>scr</feature>
-            <feature>http</feature>
-            <feature>http-whiteboard</feature>
-            <feature>cxf</feature>
-
-            <feature>war</feature>
-
-            <feature>transaction</feature>
-            <feature>jndi</feature>
-            <feature>jdbc</feature>
-            <feature>pax-jdbc</feature>
-            <feature>pax-jdbc-spec</feature>
-            <feature>pax-jdbc-config</feature>
-            <feature>pax-jdbc-pool-dbcp2</feature>
-            <feature dependency="true">aries-blueprint</feature>
-            <feature version="[2,3)">jpa</feature>
-            <feature version="[5,6)">hibernate</feature>
-
-            <feature>patlego-vm</feature>
-
-          </bootFeatures>
-          <workDirectory>${project.build.directory}/assembly/patlego.vm</workDirectory>
-          <pathPrefix>patlego.vm</pathPrefix>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-
-  <profiles>
-    <profile>
-      <id>dev-build</id>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-resources-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>copy-docker</id>
-                <phase>verify</phase>
-                <goals>
-                  <goal>copy-resources</goal>
-                </goals>
-                <configuration>
-                  <outputDirectory>${basedir}/target/assembly</outputDirectory>
-                  <resources>
-                    <resource>
-                      <directory>src/main/environments/dev/docker</directory>
-                      <filtering>true</filtering>
-                    </resource>
-                  </resources>
-                </configuration>
-              </execution>
-              <execution>
-                <id>copy-features</id>
-                <!-- here the phase you need -->
-                <phase>verify</phase>
-                <goals>
-                  <goal>copy-resources</goal>
-                </goals>
-                <configuration>
-                  <outputDirectory>${basedir}/target/assembly/patlego.vm/etc</outputDirectory>
-                  <resources>
-                    <resource>
-                      <directory>src/main/environments/dev/features</directory>
-                      <filtering>true</filtering>
-                    </resource>
-                  </resources>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <profile>
-      <id>ecs-build</id>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-resources-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>copy-docker</id>
-                <phase>verify</phase>
-                <goals>
-                  <goal>copy-resources</goal>
-                </goals>
-                <configuration>
-                  <outputDirectory>${basedir}/target/assembly</outputDirectory>
-                  <resources>
-                    <resource>
-                      <directory>src/main/environments/ecs/docker</directory>
-                      <filtering>true</filtering>
-                    </resource>
-                  </resources>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>io.fabric8</groupId>
-            <artifactId>docker-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>Remove Docker</id>
-                <goals>
-                  <goal>remove</goal>
-                </goals>
-                <phase>verify</phase>
-              </execution>
-              <execution>
-                <id>Build Docker</id>
-                <goals>
-                  <goal>build</goal>
-                </goals>
-                <phase>verify</phase>
-              </execution>
-            </executions>
-            <configuration>
-              <images>
-                <image>
-                  <name>525939336058.dkr.ecr.ca-central-1.amazonaws.com/pat-lego-vm:karaf-vm</name>
-                  <alias>dockerfile</alias>
-                  <build>
-                    <dockerFile>${project.build.directory}/assembly/Karaf.Dockerfile</dockerFile>
-                  </build>
-                </image>
-              </images>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
-
-  <dependencies>
-    <dependency>
-      <groupId>org.apache.karaf.features</groupId>
-      <artifactId>framework</artifactId>
-      <version>${karaf.runtime.version}</version>
-      <type>kar</type>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.karaf.features</groupId>
-      <artifactId>framework</artifactId>
-      <version>${karaf.runtime.version}</version>
-      <classifier>features</classifier>
-      <type>xml</type>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.karaf.features</groupId>
-      <artifactId>standard</artifactId>
-      <version>${karaf.runtime.version}</version>
-      <classifier>features</classifier>
-      <type>xml</type>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.karaf.features</groupId>
-      <artifactId>enterprise</artifactId>
-      <version>${karaf.runtime.version}</version>
-      <classifier>features</classifier>
-      <type>xml</type>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.cxf.karaf</groupId>
-      <artifactId>apache-cxf</artifactId>
-      <type>xml</type>
-      <classifier>features</classifier>
-      <scope>runtime</scope>
-      <version>3.4.2</version>
-    </dependency>
-    <dependency>
-      <groupId>io.github.vm.patlego</groupId>
-      <artifactId>system.features</artifactId>
-      <type>xml</type>
-      <scope>runtime</scope>
-      <version>${project.version}</version>
-    </dependency>
-  </dependencies>
-</project>
+  <packaging>pom</packaging>
+  
+  <modules>
+    <module>core.features</module>
+    <module>core.kernel</module>
+  </modules>
+</project> 
