--- a/.github/workflows/deploy-artifacts.yml
+++ b/.github/workflows/deploy-artifacts.yml
@@ -5,7 +5,7 @@ on:
       - master
 jobs:
   build_and_deploy:
-    name: Deploy new container to ECS
+    name: Deploy Artifacts to GH Packages
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
