--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -40,6 +40,7 @@
     <commons-text.version>1.9</commons-text.version>
     <aries.jpa.version>2.7.2</aries.jpa.version>
     <google-gson.version>2.8.6</google-gson.version>
+    <hibernate-types.version>2.10.3</hibernate-types.version>
   </properties>
   <repositories>
     <repository>
