--- a/karaf-system/system.mail/pom.xml
+++ b/karaf-system/system.mail/pom.xml
@@ -11,9 +11,19 @@
   <artifactId>system.mail</artifactId>
   <packaging>pom</packaging>
   <name>system.mail</name>
-  
+
   <modules>
     <module>mail.core</module>
     <module>mail.cfg</module>
   </modules>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>javax.mail</groupId>
+        <artifactId>mail</artifactId>
+        <version>${javax.mail.version}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 </project> 
