--- a/karaf-system/system.workflow/pom.xml
+++ b/karaf-system/system.workflow/pom.xml
@@ -8,10 +8,24 @@
   </parent>
   <groupId>io.github.vm.patlego</groupId>
   <artifactId>system.workflow</artifactId>
+
   <packaging>pom</packaging>
+
   <name>System Workflow</name>
+
   <modules>
     <module>workflow.core</module>
     <module>workflow.dao</module>
   </modules>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.apache.sling</groupId>
+        <artifactId>org.apache.sling.testing.osgi-mock.junit5</artifactId>
+        <version>2.4.16</version>
+        <scope>test</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 </project>
