Adding better class path

--- a/karaf-system/system.sms/sms.core/pom.xml
+++ b/karaf-system/system.sms/sms.core/pom.xml
@@ -33,7 +33,7 @@
               !javax.annotation, 
               org.apache.karaf.shell*;version="[4,5)",
               *</Import-Package>
-            <Export-Package>io.github.vm.patlego.sms.*</Export-Package>
+            <Export-Package>io.github.vm.patlego.sms.sender.*</Export-Package>
             <Embed-Dependency>twilio,
               jackson-core,
               jackson-annotations,
