--- a/karaf-system/system.sms/sms.core/pom.xml
+++ b/karaf-system/system.sms/sms.core/pom.xml
@@ -38,7 +38,11 @@
               jackson-core,
               jackson-annotations,
               jackson-databind,
-              jackson-datatype-jsr310</Embed-Dependency>
+              jackson-datatype-jsr310,
+              jjwt-api,
+              jjwt-impl,
+              jjwt-jackson</Embed-Dependency>
+            <Embed-Transitive>true</Embed-Transitive>
             <!-- Enable processing of OSGI DS component annotations -->
             <_dsannotations>*</_dsannotations>
             <!-- Enable processing of OSGI metatype annotations -->
@@ -95,6 +99,18 @@
       <groupId>io.github.vm.patlego</groupId>
       <artifactId>system.encryption</artifactId>
       <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-impl</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-jackson</artifactId>
     </dependency>
   </dependencies>
 
